# VrFace

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/stoleg/vrface/: CompModel.java  DetectionBasedTracker.java  Initializer.java  ModelLoaderTask.java  ReturnClass.java  Static.java
app/src/main/java/com/stoleg/vrface/camera/: CameraHelper.java  FrameCamera.java  (+1 more)
app/src/main/java/org/m4m/: AudioFormat.java  MediaComposer.java  MediaStreamer.java  VideoFormat.java
app/src/main/java/org/m4m/android/: CameraSource.java  GameCapturerSource.java  PreviewRender.java
app/src/main/java/org/m4m/domain/: CapturePipeline.java  CaptureSource.java  MediaFormat.java
app/src/main/java/org/m4m/samples/: VideoCapture.java
app/src/main/java/org/opencv/android/: AsyncServiceHelper.java  CameraBridgeViewBase.java  CameraGLRendererBase.java  CameraGLSurfaceView.java  PortraitCameraView.java  StaticHelper.java
app/src/main/jni/: 3DFaceModel.cpp  3DFaceModel.h  Android.mk  Application.mk  CMakeLists.txt  DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h  FaceFinder.cpp  FaceFinder.h  FaceFollower.cpp  FaceFollower.h  ForwardDifference.h  LandmarkDetector.cpp  LandmarkDetector.h  Line.h  ModelClass.cpp  ModelClass.h  ObjectiveFunction.cpp  ObjectiveFunction.h  ObjectiveFunctionHelper.cpp  ObjectiveFunctionHelper.h  OrthogonalProjectionModel.cpp  OrthogonalProjectionModel.h  Shape2D.cpp  Shape2D.h  TestObjectiveFunction.cpp  TestObjectiveFunction.h  Triangle.cpp  Triangle.h  constants.h  find_coeffs_linear.hpp  orthographic_camera_estimation_linear.hpp
app/src/main/res/raw/: lbp_frontal_face.xml  lbp_left_face.xml  lbp_right_face.xml  monkey_68.xml  my_detector.xml
app/src/main/res/values/: arrays.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+29 files in other folders)
